major cleanup of root/index.html
moved more interesting trees up, and more dead trees down
massive whitespace cleanup - much easier to edit now, no visual effect on page

--- a/root/index.html
+++ b/root/index.html
@@ -71,111 +71,47 @@ dl.rootlist dd {
 
       <dl class="rootlist">
 
-      <dt>
-         <a href="mozilla-central/">Mozilla Central</a> /
-         <a href="l10n-central/">l10n</a>
-      </dt>
-      <dd>
-          This contains the main mercurial (hg) repository for development of
-Gecko, XULRunner, and Firefox.
-      </dd>
+      <dt><a href="mozilla-central/">Mozilla Central</a> / <a href="l10n-central/">l10n</a></dt>
+      <dd class="note">This contains the main mercurial (hg) repository for development of Gecko, XULRunner, and Firefox.</dd>
 
-      <dt>
-         <a href="mozilla-aurora/">Mozilla Aurora</a> /
-         <a href="l10n-mozilla-aurora/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla Aurora branch.
-      </dd>
+      <dt><a href="mozilla-aurora/">Mozilla Aurora</a> / <a href="l10n-mozilla-aurora/">l10n</a></dt>
+      <dd class="note">This is the Mozilla Aurora branch.</dd>
 
-      <dt>
-         <a href="mozilla-beta/">Mozilla Beta</a> /
-         <a href="l10n-mozilla-beta/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla Beta branch. (e.g. Firefox ## Beta)
-      </dd>
+      <dt><a href="mozilla-beta/">Mozilla Beta</a> / <a href="l10n-mozilla-beta/">l10n</a></dt>
+      <dd class="note">This is the Mozilla Beta branch. (e.g. Firefox ## Beta)</dd>
 
-      <dt>
-         <a href="mozilla-release/">Mozilla Release</a> /
-         <a href="l10n-mozilla-release/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla Release branch.  (e.g. Firefox ##)
-      </dd>
+      <dt><a href="mozilla-release/">Mozilla Release</a> / <a href="l10n-mozilla-release/">l10n</a></dt>
+      <dd class="note">This is the Mozilla Release branch.  (e.g. Firefox ##)</dd>
 
-      <dt>
-         <a href="mozilla-b2g18/">Mozilla B2G18</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla FirefoxOS 18 branch. (for Gecko code)
-      </dd>
+      <dt><a href="mozilla-b2g18/">Mozilla B2G18</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 18 branch. (for Gecko code)</dd>
 
-      <dt>
-         <a href="gaia/">B2G - Gaia</a>
-      </dt>
-      <dd>
-          Pulled from: https://github.com/mozilla-b2g/gaia
-      </dd>
+      <dt><a href="gaia/">B2G - Gaia</a></dt>
+      <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
-      <dt>
-         <a href="mozilla-esr10/">Mozilla ESR10</a> /
-         <a href="l10n-mozilla-esr10/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla ESR10 branch.  (e.g. Firefox ESR 10)
-      </dd>
+      <dt><a href="mozilla-esr10/">Mozilla ESR10</a> / <a href="l10n-mozilla-esr10/">l10n</a></dt>
+      <dd class="note">This is the Mozilla ESR10 branch.  (e.g. Firefox ESR 10)</dd>
 
-      <dt>
-         <a href="mozilla-esr17/">Mozilla ESR17</a> /
-         <a href="l10n-mozilla-esr17/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla ESR17 branch.  (e.g. Firefox ESR 17)
-      </dd>
+      <dt><a href="mozilla-esr17/">Mozilla ESR17</a> / <a href="l10n-mozilla-esr17/">l10n</a></dt>
+      <dd class="note">This is the Mozilla ESR17 branch.  (e.g. Firefox ESR 17)</dd>
 
-      <dt>
-         <a href="comm-central/">Comm. Central</a>
-      </dt>
-      <dd>
-          This contains the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Calendar.
-      </dd>
+      <dt><a href="comm-central/">Comm. Central</a></dt>
+      <dd>This contains the mercurial (hg) repository for Thunderbird, SeaMonkey, and Calendar.</dd>
       
-      <dt>
-         <a href="comm-aurora/">Comm. Aurora</a>
-      </dt>
-      <dd>
-          Thunderbird and SeaMonkey aurora channel.
-      </dd>
+      <dt><a href="comm-aurora/">Comm. Aurora</a></dt>
+      <dd>Thunderbird and SeaMonkey aurora channel.</dd>
 
-      <dt>
-         <a href="comm-beta/">Comm. Beta</a>
-      </dt>
-      <dd>
-          Thunderbird and SeaMonkey beta channel.
-      </dd>
+      <dt><a href="comm-beta/">Comm. Beta</a></dt>
+      <dd>Thunderbird and SeaMonkey beta channel.</dd>
 
-      <dt>
-         <a href="comm-release/">Comm. Release</a>
-      </dt>
-      <dd>
-          Released versions of Thunderbird, Seamonkey, etc.
-      </dd>
+      <dt><a href="comm-release/">Comm. Release</a></dt>
+      <dd>Released versions of Thunderbird, Seamonkey, etc.</dd>
 
-      <dt>
-         <a href="comm-esr10/">Comm. ESR10</a>
-      </dt>
-      <dd>
-          ESR10 versions of Thunderbird, Seamonkey, etc.
-      </dd>
+      <dt><a href="comm-esr10/">Comm. ESR10</a></dt>
+      <dd>ESR10 versions of Thunderbird, Seamonkey, etc.</dd>
 
-      <dt>
-         <a href="comm-esr17/">Comm. ESR17</a>
-      </dt>
-      <dd>
-          ESR17 versions of Thunderbird, Seamonkey, etc.
-      </dd>
+      <dt><a href="comm-esr17/">Comm. ESR17</a></dt>
+      <dd>ESR17 versions of Thunderbird, Seamonkey, etc.</dd>
 
       <dt><a href="nspr/">NSPR</a></dt>
       <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
@@ -195,62 +131,20 @@ SeaMonkey, and Calendar.
       <dt><a href="security/">Security CVS</a></dt>
       <dd class="note">This is the section of the CVS repository that contains NSPR, NSS,  JSS, and python-nss. The CVS repository is now read-only after the NSS project migrated to Mercurial. See "NSS" above.'</dd>
 
-      <dt>
-         <a href="chromium/">Chromium</a>
-      </dt>
-      <dd>
-          This is the latest "last known good revision" of Chromium trunk.
-      </dd>
+      <dt><a href="chromium/">Chromium</a></dt>
+      <dd>This is the latest "last known good revision" of Chromium trunk.</dd>
 
-      <dt>
-         <a href="seamonkey/">SeaMonkey</a> /
-         <a href="l10n/">l10n</a>
-      </dt>
-      <dd>
-          This the old code in CVS for Gecko, XULRunner, Firefox, Thunderbird,
-Calendar, Camino, and SeaMonkey. For Gecko, XULRunner, and Firefox. CVS
-trunk is only used for Gecko 1.9.0 / Firefox 3 and the 1.9.0.* / 3.0.* security
-releases. 
-      </dd>
+      <dt><a href="seamonkey/">SeaMonkey</a> / <a href="l10n/">l10n</a></dt>
+      <dd>This the old code in CVS for Gecko, XULRunner, Firefox, Thunderbird, Calendar, Camino, and SeaMonkey. CVS trunk is only used for Gecko 1.9.0 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.</dd>
 
-      <dt>
-         <a href="mobile-browser/">mobile-browser</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="//wiki.mozilla.org/Mobile">Fennec</a>
-mobile web browser.
-      </dd>
-
-      <dt>
-         <a href="camino/">Camino</a>
-      </dt>
-      <dd class="note">
-          This is the source code of the <a
-href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
-      </dd>
+      <dt><a href="camino/">Camino</a></dt>
+      <dd class="note">This is the source code of the <a href="//caminobrowser.org/">Camino browser</a> for Mac OS X.</dd>
       
-      <dt>
-         <a href="aviarybranch/">Aviary Branch</a> /
-         <a href="l10n-aviarybranch/">l10n</a>
-      </dt>
-      <dd>
-          This module is Aviary's 1.0.1 Branch, Mozilla toolkit derived projects.
-      </dd>
+      <dt><a href="fuel/">FUEL</a></dt>
+      <dd class="note">This is <a href="https://developer.mozilla.org/en/FUEL">FUEL</a>, a JavaScript library designed to help developers build extensions using terminology and interfaces that are familiar to them.</dd>
 
-      <dt>
-         <a href="fuel/">FUEL</a>
-      </dt>
-      <dd class="note">
-         This is <a href="https://developer.mozilla.org/en/FUEL">FUEL</a>,
-         a JavaScript library designed to help developers build extensions using
-         terminology and interfaces that are familiar to them.
-      </dd>
-
-      <dt>
-         <a href="js/">JavaScript</a>
-      </dt>
-      <dd class="note">
-          This is Mozilla JavaScript. It includes
+      <dt><a href="js/">JavaScript</a></dt>
+      <dd class="note">This is Mozilla JavaScript. It includes
           <a href="js/source/js/src">SpiderMonkey</a>,
           <a href="js/source/js/rhino">Rhino</a>,
           <a href="js/source/js2">Epimetheus</a>,
@@ -259,20 +153,8 @@ href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
           <a href="js/source/js/tests">test suites</a>.
       </dd>
 
-      <dt>
-         <a href="tamarin-central/">Tamarin</a>
-      </dt>
-      <dd class="note">
-          This is <a href="//www.mozilla.org/projects/tamarin/"
-         >Tamarin</a>
-      </dd>
-
-      <dt>
-         <a href="webtools-central/">Webtools</a> /
-         <a href="webtools/">Webtools (CVS)</a>
-      </dt>
-      <dd class="note">
-          These are the Mozilla Webtools. They include
+      <dt><a href="webtools-central/">Webtools</a> / <a href="webtools/">Webtools (CVS)</a></dt>
+      <dd class="note">These are the Mozilla Webtools. They include
           <a href="webtools-central/source/bzapi/">BZAPI</a>,
           <a href="webtools-central/source/despot/">Despot</a>,
           <a href="webtools-central/source/dxr/">DXR</a>,
@@ -287,12 +169,8 @@ href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
           <a href="webtools/source/mozbot">Mozbot</a>.
       </dd>
 
-      <dt>
-         <a href="build/">Build</a>
-      </dt>
-      <dd class="note">
-          Build/Release tools and configuration files
-      </dd>
+      <dt><a href="build/">Build</a></dt>
+      <dd class="note">Build/Release tools and configuration files</dd>
 
       <dt>
          <a href="bugzilla/">Bugzilla</a> (<span class="note"
@@ -301,167 +179,80 @@ href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
           <a href="bugzilla2.22/">2.22.x</a>,
           <a href="bugzilla2.20/">2.20.x</a></span>)
       </dt>
-      <dd class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
+      <dd class="note">This is <a href="http://bugzilla.org/">Bugzilla</a>
           See <a href="http://www.bugzilla.org/docs/tip/html/">docs</a>.
       </dd>
 
-      <dt>
-         <a href="projects-central/">Projects</a>
-      </dt>
-      <dd class="note">
-         This is the home for incomplete mozilla-central
-         projects.
-      </dd>
+      <dt><a href="projects-central/">Projects</a></dt>
+      <dd class="note">This is the home for incomplete mozilla-central projects.</dd>
 
-      <dt>
-         <a href="services-central/">Services</a>
-      </dt>
-      <dd class="note">
-         All production code associated with the Weave project,
-         including Firefox Sync, Firefox Home, and the server backends.
-      </dd>
+      <dt><a href="services-central/">Services</a></dt>
+      <dd class="note">All production code associated with the Weave project, including Firefox Sync, Firefox Home, and the server backends.</dd>
 
-      <dt>
-         <a href="incubator-central/">Incubator</a>
-      </dt>
-      <dd class="note">
-         This is the temporary home for mozilla.org
-         projects. See the <a href="//www.mozilla.org/hacking/incubator-repository.html"
-        >Incubator Repositories Policy</a>.
-      </dd>
+      <dt><a href="incubator-central/">Incubator</a></dt>
+      <dd class="note">This is the temporary home for mozilla.org projects. See the <a href="//www.mozilla.org/hacking/incubator-repository.html">Incubator Repositories Policy</a>.</dd>
 
-      <dt>
-         <a href="labs-central/">Mozilla Labs Projects</a>
-      </dt>
-      <dd class="note">
-         This module contains code related to
-         <a href="//www.mozillalabs.com">Mozilla Labs Projects</a>
-         Jetpack-SDK, Bespin, Raindrop, Weave, etc.
-      </dd>
+      <dt><a href="labs-central/">Mozilla Labs Projects</a></dt>
+      <dd class="note">This module contains code related to <a href="//www.mozillalabs.com">Mozilla Labs Projects</a> Jetpack-SDK, Bespin, Raindrop, Weave, etc.</dd>
 
-      <dt>
-         <a href="mozillausers-central/">Mozilla Users</a>
-      </dt>
-      <dd class="note">
-         This is the home for mozilla.org developers'
-         miscellaneous shared projects.
-      </dd>
+      <dt><a href="amo/">amo</a></dt>
+      <dd class="note">This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.</dd>
 
-      <dt>
-         <a href="amo/">amo</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.
-      </dd>
+
 
       <dt>Archived Trees</dt>
       <dd class="note">Things below here are present for reference only.</dd>
 
-      <dt>
-         <a href="mozilla2.0/">Mozilla 2.0</a> /
-         <a href="l10n-mozilla2.0/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)
-      </dd>
+      <dt><a href="mozillausers-central/">Mozilla Users</a></dt>
+      <dd class="note">This is the home for mozilla.org developers' miscellaneous shared projects.</dd>
 
-      <dt>
-         <a href="mozilla1.9.2/">Mozilla 1.9.2</a> /
-         <a href="l10n-mozilla1.9.2/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.9.2 branch.  (e.g. Firefox 3.6)
-      </dd>
+      <dt><a href="mozilla2.0/">Mozilla 2.0</a> / <a href="l10n-mozilla2.0/">l10n</a></dt>
+      <dd class="note">This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)</dd>
 
-      <dt>
-         <a href="mozilla1.9.1/">Mozilla 1.9.1</a> /
-         <a href="l10n-mozilla1.9.1/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.9.1 branch.  (e.g. Firefox 3.5)
-      </dd>
+      <dt><a href="mozilla1.9.2/">Mozilla 1.9.2</a> / <a href="l10n-mozilla1.9.2/">l10n</a></dt>
+      <dd class="note">This is the Mozilla 1.9.2 branch.  (e.g. Firefox 3.6)</dd>
 
-      <dt>
-         <a href="comm-2.0/">Comm. 2.0</a>
-      </dt>
-      <dd>
-          Branch development for Thunderbird, SeaMonkey, and Sunbird development with Gecko 2.0.
-      </dd>
+      <dt><a href="mozilla1.9.1/">Mozilla 1.9.1</a> / <a href="l10n-mozilla1.9.1/">l10n</a></dt>
+      <dd class="note">This is the Mozilla 1.9.1 branch.  (e.g. Firefox 3.5)</dd>
 
-      <dt>
-         <a href="comm-1.9.2/">Comm. 1.9.2</a>
-      </dt>
-      <dd>
-          This contains the 1.9.2 branch of the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Sunbird.
-      </dd>
+      <dt><a href="mobile-browser/">mobile-browser</a></dt>
+      <dd class="note">This is the <a href="//wiki.mozilla.org/Mobile">Fennec</a> mobile web browser.</dd>
 
-      <dt>
-         <a href="comm-1.9.1/">Comm. 1.9.1</a>
-      </dt>
-      <dd>
-          This contains the 1.9.1 branch of the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Sunbird.
-      </dd>
+      <dt><a href="aviarybranch/">Aviary Branch</a> / <a href="l10n-aviarybranch/">l10n</a></dt>
+      <dd>This module is Aviary's 1.0.1 Branch, Mozilla toolkit derived projects.</dd>
 
-      <dt>
-         <a href="mozilla/">Mozilla CVS</a>
-      </dt>
-      <dd>
-          This contains the entire current CVS repository.  For Gecko,
-XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead
-used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
-      </dd>
+      <dt><a href="comm-2.0/">Comm. 2.0</a></dt>
+      <dd>Branch development for Thunderbird, SeaMonkey, and Sunbird development with Gecko 2.0.</dd>
 
-      <dt>
-         <a href="firefox/">Firefox 3</a>
-      </dt>
-      <dd class="note">
-          The source specific to the Firefox 3 web browser.  Also available is the
-          <a href="firefox2/">Firefox 2.0 Branch</a>.
-      </dd>
+      <dt><a href="comm-1.9.2/">Comm. 1.9.2</a></dt>
+      <dd>This contains the 1.9.2 branch of the mercurial (hg) repository for Thunderbird, SeaMonkey, and Sunbird.</dd>
 
-      <dt>
-         <a href="classic/">Classic</a>
-      </dt>
-      <dd class="note">
-          This is Mozilla Classic. It's a snapshot of the MozillaSource
-          module from Oct 26, 1998 just before the change was made to xpfe.
-          This is here for reference. No work is done on this branch.
-      </dd>
+      <dt><a href="comm-1.9.1/">Comm. 1.9.1</a></dt>
+      <dd>This contains the 1.9.1 branch of the mercurial (hg) repository for Thunderbird, SeaMonkey, and Sunbird.</dd>
 
-      <dt>
-         <a href="mozilla1.8/">Mozilla 1.8</a> /
-         <a href="l10n-mozilla1.8/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.8 branch.  This module also hosts
-Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
-      </dd>
+      <dt><a href="mozilla/">Mozilla CVS</a></dt>
+      <dd>This contains the entire current CVS repository.  For Gecko, XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.</dd>
 
-      <dt>
-         <a href="mozilla1.8.0/">Mozilla 1.8.0</a> /
-         <a href="l10n-mozilla1.8.0/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.8.0 branch.  This is for security releases
-products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
-      </dd>
+      <dt><a href="firefox/">Firefox 3</a></dt>
+      <dd class="note">The source specific to the Firefox 3 web browser.  Also available is the <a href="firefox2/">Firefox 2.0 Branch</a>.</dd>
 
-      <dt>
-         <a href="mozilla-org/">mozilla-org</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="//www.mozilla.org/">www.mozilla.org</a> website.
-      </dd>
+      <dt><a href="tamarin-central/">Tamarin</a></dt>
+      <dd class="note">This is <a href="//www.mozilla.org/projects/tamarin/">Tamarin</a></dd>
 
-      <dt>
-         <a href="spreadfirefox/">spreadfirefox</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="//www.spreadfirefox.com">www.spreadfirefox.com</a> website.
-      </dd>
+      <dt><a href="classic/">Classic</a></dt>
+      <dd class="note">This is Mozilla Classic. It's a snapshot of the MozillaSource module from Oct 26, 1998 just before the change was made to xpfe. This is here for reference. No work is done on this branch.</dd>
+
+      <dt><a href="mozilla1.8/">Mozilla 1.8</a> / <a href="l10n-mozilla1.8/">l10n</a></dt>
+      <dd class="note">This is the Mozilla 1.8 branch.  This module also hosts Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.</dd>
+
+      <dt><a href="mozilla1.8.0/">Mozilla 1.8.0</a> / <a href="l10n-mozilla1.8.0/">l10n</a></dt>
+      <dd class="note">This is the Mozilla 1.8.0 branch.  This is for security releases products released from Mozilla 1.8 Release (e.g. Firefox 1.5).</dd>
+
+      <dt><a href="mozilla-org/">mozilla-org</a></dt>
+      <dd class="note">This is the <a href="//www.mozilla.org/">www.mozilla.org</a> website.</dd>
+
+      <dt><a href="spreadfirefox/">spreadfirefox</a></dt>
+      <dd class="note">This is the <a href="//www.spreadfirefox.com">www.spreadfirefox.com</a> website.</dd>
 
       </dl>
 
