Bug 915890 - add rust/servo to mxr index page

--- a/root/index.html
+++ b/root/index.html
@@ -137,6 +137,12 @@ dl.rootlist dd {
       <dt><a href="fuel/">FUEL</a></dt>
       <dd class="note">This is <a href="https://developer.mozilla.org/en/FUEL">FUEL</a>, a JavaScript library designed to help developers build extensions using terminology and interfaces that are familiar to them.</dd>
 
+      <dt><a href="rust/">Rust</a></dt>
+      <dd class="note">The <a href="https://github.com/mozilla/rust/">Rust programming language</a>, compiler, standard libraries, tools and documentation.</dd>
+
+      <dt><a href="servo/">Servo</a></dt>
+      <dd class="note">The <a href="https://github.com/mozilla/servo/">Servo Parallel Browser Project</a>, a protoype web browser engine written in the Rust language.</dd>
+
       <dt><a href="js/">JavaScript</a></dt>
       <dd class="note">This is Mozilla JavaScript. It includes
           <a href="js/source/js/src">SpiderMonkey</a>,
