Bug 890923 - add mozmill-tests indexing

--- a/root/index.html
+++ b/root/index.html
@@ -183,6 +183,9 @@ dl.rootlist dd {
           See <a href="http://www.bugzilla.org/docs/tip/html/">docs</a>.
       </dd>
 
+      <dt><a href="mozmill-tests/">Mozmill Tests</a></dt>
+      <dd class="note">This is repository for the <a href="https://quality.mozilla.org/docs/mozmill/">Mozmill</a> tests and API..</dd>
+
       <dt><a href="projects-central/">Projects</a></dt>
       <dd class="note">This is the home for incomplete mozilla-central projects.</dd>
 
