Bug 795709 - add gaia-l10n

--- a/root/index.html
+++ b/root/index.html
@@ -89,6 +89,9 @@ dl.rootlist dd {
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
+      <dt><a href="gaia-l10n/">B2G - Gaia localization</a></dt>
+      <dd>Pulled from: https://hg.mozilla.org/gaia-l10n</dd>
+
       <dt><a href="comm-central/">Comm. Central</a></dt>
       <dd>This contains the mercurial (hg) repository for Thunderbird, SeaMonkey, and Calendar.</dd>
       
