Bug 795709 - add/fix gaia-l10n trees

--- a/root/index.html
+++ b/root/index.html
@@ -89,8 +89,14 @@ dl.rootlist dd {
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
-      <dt><a href="gaia-l10n/">B2G - Gaia localization</a></dt>
-      <dd>Pulled from: https://hg.mozilla.org/gaia-l10n</dd>
+      <dt>
+         <a href="l10n-gaia/">Gaia-l10n</a> (<span class="note"
+         ><a href="l10n-gaia-v1_3/">v1_3/a>,
+          <a href="l10n-gaia-v1_2/">v1_2</a>,
+          <a href="l10n-gaia-v1_1/">v1_1</a>,
+          <a href="l10n-gaia-v1_0_1/">v1_0_1</a></span>)
+      </dt>
+      <dd class="note">Gaia localization.</dd>
 
       <dt><a href="comm-central/">Comm. Central</a></dt>
       <dd>This contains the mercurial (hg) repository for Thunderbird, SeaMonkey, and Calendar.</dd>
