--- a/root/index.html
+++ b/root/index.html
@@ -91,7 +91,7 @@ dl.rootlist dd {
 
       <dt>
          <a href="l10n-gaia/">Gaia-l10n</a> (<span class="note"
-         ><a href="l10n-gaia-v1_3/">v1_3/a>,
+         ><a href="l10n-gaia-v1_3/">v1_3</a>,
           <a href="l10n-gaia-v1_2/">v1_2</a>,
           <a href="l10n-gaia-v1_1/">v1_1</a>,
           <a href="l10n-gaia-v1_0_1/">v1_0_1</a></span>)
