--- a/root/index.html
+++ b/root/index.html
@@ -83,8 +83,14 @@ dl.rootlist dd {
       <dt><a href="mozilla-release/">Mozilla Release</a> / <a href="l10n-mozilla-release/">l10n</a></dt>
       <dd class="note">This is the Mozilla Release branch.  (e.g. Firefox ##)</dd>
 
+      <dt><a href="mozilla-esr24/">Mozilla ESR24</a></dt>
+      <dd>ESR24 version of Firefox</dd>
+
       <dt><a href="mozilla-b2g18/">Mozilla B2G18</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 18 branch. (for Gecko code)</dd>
+
+      <dt><a href="mozilla-b2g26_v1_2/">Mozilla B2G26 v1_2</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 26 v1_2 branch. (for Gecko code)</dd>
 
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
