--- a/root/index.html
+++ b/root/index.html
@@ -92,6 +92,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-b2g26_v1_2/">Mozilla B2G26 v1_2</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 26 v1_2 branch. (for Gecko code)</dd>
 
+      <dt><a href="mozilla-b2g28_v1_3/">Mozilla B2G28 v1_3</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 28 v1_3 branch. (for Gecko code)</dd>
+
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
