adding mozilla-esr31

--- a/root/index.html
+++ b/root/index.html
@@ -86,6 +86,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-esr24/">Mozilla ESR24</a></dt>
       <dd>ESR24 version of Firefox</dd>
 
+      <dt><a href="mozilla-esr31/">Mozilla ESR31</a></dt>
+      <dd>ESR31 version of Firefox</dd>
+
       <dt><a href="mozilla-b2g18/">Mozilla B2G18</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 18 branch. (for Gecko code)</dd>
 
