--- a/root/index.html
+++ b/root/index.html
@@ -101,6 +101,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-b2g28_v1_3t/">Mozilla B2G28 v1_3t</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 28 v1_3t branch. (for Gecko code)</dd>
 
+      <dt><a href="mozilla-b2g30_v1_4/">Mozilla B2G30 v1_4</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 30 v1_4 branch. (for Gecko code)</dd>
+
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
