--- a/root/index.html
+++ b/root/index.html
@@ -98,6 +98,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-b2g30_v1_4/">Mozilla B2G30 v1_4</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 30 v1_4 branch. (for Gecko code)</dd>
 
+      <dt><a href="mozilla-b2g32_v2_0/">Mozilla B2G32 v2_0</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 32 v2_0 branch. (for Gecko code)</dd>
+
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
