--- a/root/index.html
+++ b/root/index.html
@@ -134,6 +134,9 @@ dl.rootlist dd {
       <dt><a href="comm-esr24/">Comm. ESR24</a></dt>
       <dd>ESR24 versions of Thunderbird, Seamonkey, etc.</dd>
 
+      <dt><a href="comm-esr31/">Comm. ESR31</a></dt>
+      <dd>ESR24 versions of Thunderbird, Seamonkey, etc.</dd>
+
       <dt><a href="nspr/">NSPR</a></dt>
       <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
 
