Bug 1089335 - add mozilla-b2g34_v2_1

--- a/root/index.html
+++ b/root/index.html
@@ -101,6 +101,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-b2g32_v2_0/">Mozilla B2G32 v2_0</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 32 v2_0 branch. (for Gecko code)</dd>
 
+      <dt><a href="mozilla-b2g34_v2_1/">Mozilla B2G34 v2_1</a></dt>
+      <dd class="note">This is the Mozilla FirefoxOS 34 v2_1 branch. (for Gecko code)</dd>
+
       <dt><a href="gaia/">B2G - Gaia</a></dt>
       <dd>Pulled from: https://github.com/mozilla-b2g/gaia</dd>
 
