Bug 1172099 - add mozilla-esr38 and comm-esr38

--- a/root/index.html
+++ b/root/index.html
@@ -89,6 +89,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-esr31/">Mozilla ESR31</a></dt>
       <dd>ESR31 version of Firefox</dd>
 
+      <dt><a href="mozilla-esr38/">Mozilla ESR38</a></dt>
+      <dd>ESR38 version of Firefox</dd>
+
       <dt><a href="mozilla-b2g28_v1_3/">Mozilla B2G28 v1_3</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 28 v1_3 branch. (for Gecko code)</dd>
 
@@ -142,6 +145,9 @@ dl.rootlist dd {
 
       <dt><a href="comm-esr31/">Comm. ESR31</a></dt>
       <dd>ESR31 versions of Thunderbird, Seamonkey, etc.</dd>
+
+      <dt><a href="comm-esr38/">Comm. ESR38</a></dt>
+      <dd>ESR38 versions of Thunderbird, Seamonkey, etc.</dd>
 
       <dt><a href="nspr/">NSPR</a></dt>
       <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
