remove old amo/addons-stage bits; fix index.html link

--- a/root/index.html
+++ b/root/index.html
@@ -240,7 +240,7 @@ dl.rootlist dd {
       <dt><a href="labs-central/">Mozilla Labs Projects</a></dt>
       <dd class="note">This module contains code related to <a href="//www.mozillalabs.com">Mozilla Labs Projects</a> Jetpack-SDK, Bespin, Raindrop, Weave, etc.</dd>
 
-      <dt><a href="amo/">amo</a></dt>
+      <dt><a href="addons/">amo</a></dt>
       <dd class="note">This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.</dd>
 
 
