Bug 1253141 - add mozilla-esr45

--- a/root/index.html
+++ b/root/index.html
@@ -92,6 +92,9 @@ dl.rootlist dd {
       <dt><a href="mozilla-esr38/">Mozilla ESR38</a></dt>
       <dd>ESR38 version of Firefox</dd>
 
+      <dt><a href="mozilla-esr45/">Mozilla ESR45</a></dt>
+      <dd>ESR45 version of Firefox</dd>
+
       <dt><a href="mozilla-b2g28_v1_3/">Mozilla B2G28 v1_3</a></dt>
       <dd class="note">This is the Mozilla FirefoxOS 28 v1_3 branch. (for Gecko code)</dd>
 
