Bug 1259687 - add comm-esr45

--- a/root/index.html
+++ b/root/index.html
@@ -152,6 +152,9 @@ dl.rootlist dd {
       <dt><a href="comm-esr38/">Comm. ESR38</a></dt>
       <dd>ESR38 versions of Thunderbird, Seamonkey, etc.</dd>
 
+      <dt><a href="comm-esr45/">Comm. ESR45</a></dt>
+      <dd>ESR45 versions of Thunderbird, Seamonkey, etc.</dd>
+
       <dt><a href="nspr/">NSPR</a></dt>
       <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
 
