--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <link rel="icon" href="/mxr.png" type="image/png">
- <title>Mozilla Cross-Reference</title>
+ <title>Cross-Reference</title>
  <link rel='stylesheet' title='' href='style/style.css' type='text/css'>
  <style type="text/css">
 <!--
