Update with Pale Moon XREF static files

--- a/src/root/index.html
+++ b/src/root/index.html
@@ -71,19 +71,19 @@ dl.rootlist dd {
 
       <dl class="rootlist">
 
-      <dt><a href="tycho-trunk/">Codename "Tycho" Trunk</a></dt>
-      <dd class="note">This contains the latest development code (git master branch) for the Next Generation Goanna Rendering Engine and the Pale Moon browser</dd>
-
       <dt><a href="palemoon-trunk/">Pale Moon Trunk</a></dt>
       <dd class="note">This contains the latest development code (git master branch) for the Goanna Rendering Engine and the Pale Moon browser</dd>
-	  
-	  <dt><a href="palemoon-rel26/">Pale Moon 26</a></dt>
-      <dd class="note">This contains a snapshot of the code for the latest released version of Pale Moon 26.x</dd>
 
-	  <dt><a href="palemoon-rel25/">Pale Moon 25</a></dt>
+      <dt><a href="palemoon-rel27/">Pale Moon 27</a></dt>
+      <dd class="note">This contains a snapshot of the code for the latest released version of Pale Moon 27.x</dd>
+ 
+      <dt><a href="palemoon-rel26/">Pale Moon 26</a></dt>
+      <dd class="note">This contains a snapshot of the code for the last released version of Pale Moon 26.x</dd>
+
+      <dt><a href="palemoon-rel25/">Pale Moon 25</a></dt>
       <dd class="note">This contains a snapshot of the code for the last released version of Pale Moon 25.x</dd>
 
-	  <dt><a href="palemoon-rel24/">Pale Moon 24</a></dt>
+      <dt><a href="palemoon-rel24/">Pale Moon 24</a></dt>
       <dd class="note">This contains a snapshot of the code for the last released version of Pale Moon 24.x</dd>
 
       <hr>
@@ -96,7 +96,17 @@ dl.rootlist dd {
      <!--  <dt><a href="#">FossaMail Release</a></dt>
       <dd class="note">This contains a snapshot of the code for the latest released version of FossaMail</dd> -->
 	  
-	  <hr>
+      <hr>
+
+      <h2>Add-ons</h2>
+
+      <dt><a href="devtools-trunk/">DevTools the Extension</a></dt>
+      <dd class="note">Original character, do not steal.</dd>
+
+      <dt><a href="adblock-latitude-trunk/">Adblock Latitude (3.5)</a></dt>
+      <dd class="note">Acceptable ads were yesterday!</dd>
+
+      <hr>
 
       <h2>Archived and Historical</h2>
 
