--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
  <link rel="icon" href="/mxr.png" type="image/png">
  <title>Cross-Reference</title>
- <link rel='stylesheet' title='' href='style/style.css' type='text/css'>
+ <link rel='stylesheet' title='' href='/media/style/style.css' type='text/css'>
  <style type="text/css">
 <!--
 div {
