--- a/search-help.html
+++ b/search-help.html
@@ -7,16 +7,15 @@
         link="#0000EE" vlink="#551a8b" alink="#ff0000">
 
 <table bgcolor="#000000" width="100%" border=0 cellpadding=0 cellspacing=0>
-<tr><td><a href="//www.mozilla.org/"><img
- src="//www.mozilla.org/images/mozilla-banner.gif" alt=""
- border=0 width=600 height=58></a></td></td></table>
+<tr><td><a href="/"><img src="/media/img/banner.png" alt="" border=0></a></td></tr>
+</table>
 <p>
 <table class=desc>
 <tr><td>
 <h1 align=center>search help<br>
 <font size=3>
 for the<br>
-<a href="./"><i>mozilla cross-reference</i></a>
+<a href="./"><i>cross-reference</i></a>
 </font></h1>
 </td></tr></table>
 
